trying to fix scroll on ios

--- a/src/layouts/DefaultLayout/styles.css
+++ b/src/layouts/DefaultLayout/styles.css
@@ -71,6 +71,9 @@ a:hover {
 
 .gatsby-plugin-transition-link-portal {
   transition: bottom 300ms ease-in;
+  height: 100vh;
+  width: 100vw;
+  pointer-events: none;
 }
 
 @media (max-width: 480px) {
